# coderbox

./: Cargo.toml  Dioxus.toml  tailwind.config.js
public/: tailwind.css
src/: main.rs  tailwind.css
src/components/: mod.rs
src/components/cards/: playlist.rs
src/components/global/: layout.rs  mod.rs  player.rs
src/components/icons/: fa.rs  io.rs  mod.rs
src/components/lyrics/: section.rs
src/components/ui/: layout.rs  nav.rs  player.rs
src/db/: mod.rs  setup.rs  songs.rs
src/home/: mod.rs  page.rs  playlist.rs
src/lyrics/: mod.rs  page.rs  section.rs
src/pages/: home.rs  lyrics.rs
src/structs/: lyrics.rs  mod.rs  music_db.rs  playlist.rs  playlist_songs.rs  song.rs
src/ui/: layout.rs  mod.rs  nav.rs  player.rs
src/utils/: player.rs
