[package]
name = "coderbox"
version = "0.1.0"
authors = ["coder2195"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.0", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-hot-reload = "0.5.0"
dir = "0.1.2"
rodio = "0.18.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
mp3-duration = "0.1.10"
dioxus-timer = "0.3.0"
tokio = "1.38.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
once_cell = "1.19.0"
rand = "0.8.5"
dioxus-free-icons = { version = "0.8.6", features = [
  "font-awesome-regular",
  "font-awesome-solid",
  "ionicons",
  "material-design-icons-action",
] }
image = "0.25.1"
reqwest = { version = "0.12.5", features = ["json"] }
